# ads126x

./: Cargo.toml
src/: lib.rs  register.rs
src/register/: enums.rs
