[package]
name = "ads126x"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.2" }
embedded-hal = { version = "0.2.7" }
bitflags = { version = "2.3.1", features = ["serde"] }
nb = "1.1.0"
heapless = { version = "0.7.16" }
cortex-m = { version = "0.7.6" }
serde = {version = "1.0.150", default-features = false, features = ["derive"]}
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
proptest = "1.2.0"
proptest-derive = "0.3.0"

[features]
arbitrary = ["dep:proptest", "dep:proptest-derive"]